--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@trpc/tanstack-react-query": "^11.8.1",
+    "axios": "^1.13.3",
     "framer-motion": "^12.29.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
+    "zustand": "^5.0.10"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
