--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@trpc/tanstack-react-query": "^11.8.1",
     "axios": "^1.13.3",
     "framer-motion": "^12.29.0",
+    "jspdf": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
